// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixtures > tests/fixtures/basic.vue 1`] = `
"// basic.js
import { defineComponent } from 'vue';
import { expectTypeOf } from 'expect-type';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
	__name: "basic",
	props: {
		foo: {
			type: String,
			required: false,
			default: "111"
		},
		bar: {
			type: Number,
			required: false,
			default: 111
		},
		baz: {
			type: Boolean,
			required: false,
			default: false
		}
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const props = __props;
		expectTypeOf(props).toEqualTypeOf();
		const __returned__ = {
			props,
			get expectTypeOf() {
				return expectTypeOf;
			}
		};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var basic = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { basic as default };
"
`;

exports[`fixtures > tests/fixtures/declare.vue 1`] = `
"// declare.js
import { defineComponent, toDisplayString } from 'vue';
import { expectTypeOf } from 'expect-type';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
	__name: "declare",
	props: { bar: {
		type: Boolean,
		required: false,
		default: true
	} },
	setup(__props, { expose: __expose }) {
		__expose();
		const props = __props;
		expectTypeOf(props).toEqualTypeOf();
		const __returned__ = { props };
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return toDisplayString($setup.props);
}
var declare = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], __FILE__]);

export { declare as default };
"
`;

exports[`fixtures > tests/fixtures/empty.vue 1`] = `
"// empty.js
import { defineComponent } from 'vue';
import { expectTypeOf } from 'expect-type';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
	__name: "empty",
	setup(__props, { expose: __expose }) {
		__expose();
		const props = __props;
		expectTypeOf().toEqualTypeOf();
		const __returned__ = {
			props,
			get expectTypeOf() {
				return expectTypeOf;
			}
		};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var empty = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { empty as default };
"
`;

exports[`fixtures > tests/fixtures/empty-defaults.vue 1`] = `
"// empty-defaults.js
import { defineComponent } from 'vue';
import { expectTypeOf } from 'expect-type';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
	__name: "empty-defaults",
	props: { foo: {
		type: String,
		required: false
	} },
	setup(__props, { expose: __expose }) {
		__expose();
		const props = __props;
		expectTypeOf().toEqualTypeOf();
		const __returned__ = {
			props,
			get expectTypeOf() {
				return expectTypeOf;
			}
		};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var emptyDefaults = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { emptyDefaults as default };
"
`;

exports[`fixtures > tests/fixtures/tsx.vue 1`] = `
"// tsx.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
	__name: "tsx",
	props: { foo: {
		type: String,
		required: false,
		default: "111"
	} },
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var tsx = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { tsx as default };
"
`;
